# nostria-signer

./: README.md  angular.json  package-lock.json  package.json  version.js
.github/: copilot-instructions.md
.github/workflows/: desktop.yml  mobile.yml  release.yml
src/: index.html  main.ts  styles.css  styles.scss
src-tauri/: Cargo.toml  build.rs  mobile.json  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/app/: app.component.ts  app.routes.ts  layout-fixes.css
src/app/components/theme-switcher/: theme-switcher.component.css  theme-switcher.component.html  theme-switcher.component.ts
src/app/components/toast/: toast.component.css  toast.component.html  toast.component.ts
src/app/pages/home/: home.component.css  home.component.html  home.component.ts
src/app/pages/reset/: reset.component.css  reset.component.html  reset.component.ts
src/app/pages/setup/: setup.component.css  setup.component.html  setup.component.ts
src/app/services/: log.service.ts  nostr.service.ts  tauri.service.ts  toast.service.ts  ui.service.ts  web-lock.service.ts
