[package]
name = "nostria-signer"
version = "0.1.8"
description = "Nostria Signer - Remote Signer for Nostr"
authors = ["brainbox.no"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = [] }
tauri-plugin-opener = "2.2.6"
tauri-plugin-shell = "2.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
keyring = { version = "3.6.2", features = ["apple-native", "windows-native", "sync-secret-service"] }
tauri-plugin-os = "2.2.1"
tauri-plugin-single-instance = "2.2.3"

[target.'cfg(target_os = "android")'.dependencies]
tauri = { version = "2.5.0", features = [] }
tauri-plugin-process = "2.2.0"

